Indonesia leaders and such

--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -380,6 +380,8 @@ PB_Questionable_Loyalty:0 "Questionable Loyalty"
 PB_Denikins_Lapdog:0 "Denikin's Lapdog"
 PB_Culinary_Enthusiast:0 "Culinary Enthusiast"
 PB_Entrepreneur:0 "Entrepreneur"
+PB_Lord_of_Cinders:0 "Lord of Cinders"
+PB_Lord_of_Cinders_desc:0 "Test"
 
 PB_Technocrats:0 "Technocrat"
 PB_Militarists:0 "Militarist"
