--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -1504,8 +1504,8 @@ GAN_an_ADJ:0 "Mongolian"
  KOR_cn_ADJ:0 "Korean"
  KOR_an_ADJ:0 "Korean"
 
- INS_ni:0 "Batavia Interim Government"
- INS_ni_DEF:0 "The Batavia Interim Government"
+ INS_ni:0 "Batavia Reclamation Junta"
+ INS_ni_DEF:0 "The Batavia Reclamation Junta"
  INS_ds:0 "Batavia Reclamation Junta"
  INS_ds_DEF:0 "the Batavia Reclamation Junta"
  INS_rc:0 "Batavia Interim Government"
@@ -1520,14 +1520,14 @@ GAN_an_ADJ:0 "Mongolian"
  INS_ss_DEF:0 "The Batavia Interim Government"
  INS_jc:0 "Batavia Interim Government"
  INS_jc_DEF:0 "The Batavia Interim Government"
- INS_ni_ADJ:0 "Indonesian"
- INS_rc_ADJ:0 "Indonesian"
- INS_lb_ADJ:0 "Indonesian"
- INS_ss_ADJ:0 "Indonesian"
- INS_jc_ADJ:0 "Indonesian"
- INS_ds_ADJ:0 "Indonesian"
- INS_cn_ADJ:0 "Indonesian"
- INS_an_ADJ:0 "Indonesian"
+ INS_ni_ADJ:0 "Batavian"
+ INS_rc_ADJ:0 "Batavian"
+ INS_lb_ADJ:0 "Batavian"
+ INS_ss_ADJ:0 "Batavian"
+ INS_jc_ADJ:0 "Batavian"
+ INS_ds_ADJ:0 "Batavian"
+ INS_cn_ADJ:0 "Batavian"
+ INS_an_ADJ:0 "Batavian"
 
  ACE_ni:0 "Sultanate of Aceh"
  ACE_ni_DEF:0 "The Sultanate of Aceh"
@@ -1554,22 +1554,22 @@ GAN_an_ADJ:0 "Mongolian"
  ACE_cn_ADJ:0 "Indonesian"
  ACE_an_ADJ:0 "Indonesian"
 
- LAN_ni:0 "Lanfang"
- LAN_ni_DEF:0 "The Free State of Lanfang"
- LAN_ds:0 "Lanfang"
- LAN_ds_DEF:0 "The Free State of Lanfang"
- LAN_rc:0 "Lanfang"
- LAN_rc_DEF:0 "The Free State of Lanfang"
- LAN_an:0 "Lanfang"
- LAN_an_DEF:0 "The Free State of Lanfang"
- LAN_cn:0 "Lanfang"
- LAN_cn_DEF:0 "The Free State of Lanfang"
+ LAN_ni:0 "Verdant Dynasty"
+ LAN_ni_DEF:0 "The Verdant Dynasty of West Borneo"
+ LAN_ds:0 "Verdant Dynasty"
+ LAN_ds_DEF:0 "The Verdant Dynasty of West Borneo"
+ LAN_rc:0 "Verdant Dynasty"
+ LAN_rc_DEF:0 "The Verdant Dynasty of West Borneo"
+ LAN_an:0 "Verdant Dynasty"
+ LAN_an_DEF:0 "The Verdant Dynasty of West Borneo"
+ LAN_cn:0 "Verdant Dynasty"
+ LAN_cn_DEF:0 "The Verdant Dynasty of West Borneo"
  LAN_lb:0 "Verdant Dynasty"
- LAN_lb_DEF:0 "The Verdant Dynasty"
- LAN_ss:0 "Lanfang"
- LAN_ss_DEF:0 "The Free State of Lanfang"
- LAN_jc:0 "Lanfang"
- LAN_jc_DEF:0 "The Free State of Lanfang"
+ LAN_lb_DEF:0 "The Verdant Dynasty of West Borneo"
+ LAN_ss:0 "Verdant Dynasty"
+ LAN_ss_DEF:0 "The Verdant Dynasty of West Borneo"
+ LAN_jc:0 "Verdant Dynasty"
+ LAN_jc_DEF:0 "The Verdant Dynasty of West Borneo"
  LAN_ni_ADJ:0 "Sino-Malay"
  LAN_rc_ADJ:0 "Sino-Malay"
  LAN_lb_ADJ:0 "Sino-Malay"
@@ -2468,30 +2468,30 @@ MPC_an_ADJ:0 "Mapuche"
  IRE_cn_ADJ:0 "Irish"
  IRE_an_ADJ:0 "Irish"
 
- KAL_ni:0 "Kalimantan Sultanate"
- KAL_ni_DEF:0 "the Kalimantan Sultanate"
- KAL_ds:0 "Kalimantan Sultanate"
- KAL_ds_DEF:0 "the Kalimantan Sultanate"
- KAL_rc:0 "Kalimantan Sultanate"
- KAL_rc_DEF:0 "the Kalimantan Sultanate"
- KAL_an:0 "Kalimantan Sultanate"
- KAL_an_DEF:0 "the Kalimantan Sultanate"
+ KAL_ni:0 "Iron Alliance of the Dayak"
+ KAL_ni_DEF:0 "The Iron Alliance of the Dayak"
+ KAL_ds:0 "Iron Alliance of the Dayak"
+ KAL_ds_DEF:0 "The Iron Alliance of the Dayak"
+ KAL_rc:0 "Iron Alliance of the Dayak"
+ KAL_rc_DEF:0 "The Iron Alliance of the Dayak"
+ KAL_an:0 "Iron Alliance of the Dayak"
+ KAL_an_DEF:0 "The Iron Alliance of the Dayak"
  KAL_cn:0 "Iron Alliance of the Dayak"
- KAL_cn_DEF:0 "the Iron Alliance of the Dayak"
- KAL_lb:0 "Kalimantan Sultanate"
- KAL_lb_DEF:0 "the Kalimantan Sultanate"
- KAL_ss:0 "Kalimantan Sultanate"
- KAL_ss_DEF:0 "the Kalimantan Sultanate"
- KAL_jc:0 "Kalimantan Sultanate"
- KAL_jc_DEF:0 "the Kalimantan Sultanate"
- KAL_ni_ADJ:0 "Kalimantan"
- KAL_rc_ADJ:0 "Kalimantan"
- KAL_lb_ADJ:0 "Kalimantan"
- KAL_ss_ADJ:0 "Kalimantan"
- KAL_jc_ADJ:0 "Kalimantan"
- KAL_ds_ADJ:0 "Kalimantan"
- KAL_cn_ADJ:0 "Kalimantan"
- KAL_an_ADJ:0 "Kalimantan"
+ KAL_cn_DEF:0 "The Iron Alliance of the Dayak"
+ KAL_lb:0 "Iron Alliance of the Dayak"
+ KAL_lb_DEF:0 "The Iron Alliance of the Dayak"
+ KAL_ss:0 "Iron Alliance of the Dayak"
+ KAL_ss_DEF:0 "The Iron Alliance of the Dayak"
+ KAL_jc:0 "Iron Alliance of the Dayak"
+ KAL_jc_DEF:0 "The Iron Alliance of the Dayak"
+ KAL_ni_ADJ:0 "Dayak"
+ KAL_rc_ADJ:0 "Dayak"
+ KAL_lb_ADJ:0 "Dayak"
+ KAL_ss_ADJ:0 "Dayak"
+ KAL_jc_ADJ:0 "Dayak"
+ KAL_ds_ADJ:0 "Dayak"
+ KAL_cn_ADJ:0 "Dayak"
+ KAL_an_ADJ:0 "Dayak"
 
  OMA_ni:0 "Muscat and Oman"
  OMA_ni_DEF:0 "the Sultanate of Muscat and Oman"
@@ -8951,9 +8951,9 @@ MLT_an_ADJ:0 "Maltese"
  HAR_DEF:0 "the Harvester's Republic"
  HAR_ADJ:0 "Harvester"
 
- DEL:0 "Deli Company"
- DEL_DEF:0 "the Deli Company"
- DEL_ADJ:0 "Delian"
+ DEL:0 "Dutch Sumatra Company"
+ DEL_DEF:0 "The Honorable Dutch Sumatra Company"
+ DEL_ADJ:0 "Dutch"
 
  CCO:0 "Corsair Confederacy"
  CCO_DEF:0 "the Corsair Confederacy"
