better indonesian strategic regions

--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -13,6 +13,7 @@
  STRATEGICREGION_12:1 "Kola"
  STRATEGICREGION_13:1 "Eastern Finland"
  STRATEGICREGION_14:0 "Trans-Urals"
+ STRATEGICREGION_15:0 "Northern Japan"
  STRATEGICREGION_16:0 "North Sea"
  STRATEGICREGION_17:1 "Ethiopian Highlands"
  STRATEGICREGION_18:0 "English Channel"
@@ -151,11 +152,11 @@
  STRATEGICREGION_151:0 "Western Siberia"
  STRATEGICREGION_152:1 "Outer Mongolia"
  STRATEGICREGION_153:0 "Northern India"
- STRATEGICREGION_154:0 "Home Islands"
+ STRATEGICREGION_154:0 "Southern Japan"
  STRATEGICREGION_155:1 "Western Manchuria"
  STRATEGICREGION_156:1 "Southern Australia"
  STRATEGICREGION_157:0 "New Zealand"
- STRATEGICREGION_158:0 "Sunda Islands"
+ STRATEGICREGION_158:0 "Java"
  STRATEGICREGION_159:0 "Borneo"
  STRATEGICREGION_160:0 "Philippines"
  STRATEGICREGION_161:0 "Iceland"
@@ -333,4 +334,8 @@
  STRATEGICREGION_332:0 "Northern Great Plains"
  STRATEGICREGION_333:0 "Northern Urals"
  STRATEGICREGION_334:0 "Eastern Anatolia"
- STRATEGICREGION_335:0 "Southern Balkands"
+ STRATEGICREGION_335:0 "Southern Balkans"
+ STRATEGICREGION_336:0 "Flores Sea"
+ STRATEGICREGION_337:0 "Molucca Sea"
+ STRATEGICREGION_338:0 "Indochina Sea"
+ STRATEGICREGION_339:0 "Karimata Strait"
