--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1736,6 +1736,7 @@ VICTORY_POINTS_7453: "Heldstad"
  VICTORY_POINTS_1373: "Djambi"
  VICTORY_POINTS_12268: "Palembang"
  VICTORY_POINTS_4361: "Teleokbetoeng"
+ VICTORY_POINTS_12165: "Menggala"
 #673 - SULAWESI
  VICTORY_POINTS_12444: "Kendari"
  VICTORY_POINTS_10263: "Makassar"
@@ -2609,8 +2610,9 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_10354: "Padang"
  VICTORY_POINTS_1648: "Pangkalanbrandan"
  VICTORY_POINTS_10522: "Sibolga"
-#1147 - EAST JAVA
+#1147 - CENTRAL JAVA
  VICTORY_POINTS_10135: "Djokjakarta"
+ VICTORY_POINTS_1413: "Semarang"
  VICTORY_POINTS_4608: "Soerabaja"
 #1148 - SABAH
  VICTORY_POINTS_10199: "Sandakan"
@@ -2659,6 +2661,14 @@ VICTORY_POINTS_4757: "Bowieville"
 
 #1290 - Aden
  VICTORY_POINTS_15002:0 "Aden"
+
+#1339 - BANTEN
+ VICTORY_POINTS_10479: "Tangerang"
+ VICTORY_POINTS_10279: "Cilegon"
+
+#1339 - East Java
+ VICTORY_POINTS_10479: "Malang"
+ VICTORY_POINTS_7654: "Banyuwangi"
 
 #1348 -Central Kalimantan
  VICTORY_POINTS_2222: "Putussibau"
@@ -3273,7 +3283,6 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_1648:0 "Pangkalanbrandan"
  VICTORY_POINTS_10522:0 "Sibolga"
  VICTORY_POINTS_10354:0 "Padang"
- VICTORY_POINTS_4361:0 "Teleokbetoeng"
  VICTORY_POINTS_12138:0 "Bengkoeloe"
  VICTORY_POINTS_12444:0 "Kendari"
  VICTORY_POINTS_10153:0 "Manado"
