--- a/localisation/english/PB_buildings_l_english.yml
+++ b/localisation/english/PB_buildings_l_english.yml
@@ -156,4 +156,8 @@
  landmark_forbidden_city_plural: "$landmark_forbidden_city$"
  landmark_forbidden_city_desc: " "
 
+ landmark_krakatoa_geothermal_plant_ruins: "Krakatoa Geothermal Plant Ruins"
+ landmark_krakatoa_geothermal_plant_ruins_plural: "$landmark_krakatoa_geothermal_plant_ruins$"
+ landmark_krakatoa_geothermal_plant_ruins_desc: " "
+
 
