Some more Island Vps

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -2224,6 +2224,7 @@ VICTORY_POINTS_9847: "Norwalk"
  VICTORY_POINTS_13218: "Vatican City"
 #916 - SINGAPORE
  VICTORY_POINTS_12299: "Singapore"
+ VICTORY_POINTS_12113: "Batam"
 #917 - HAMBURG
  VICTORY_POINTS_9347: "Hamburg"
 #918 - BORKOU
@@ -2669,6 +2670,15 @@ VICTORY_POINTS_4757: "Bowieville"
 #1339 - East Java
  VICTORY_POINTS_10479: "Malang"
  VICTORY_POINTS_7654: "Banyuwangi"
+
+#1343 -RIAU ISLANDS
+ VICTORY_POINTS_15421: "Tarempa"
+
+#1344 -MERANTI ISLANDS
+ VICTORY_POINTS_15414: "Selat Panjang"
+
+#1347 -Bengka - Belitung
+ VICTORY_POINTS_7384: "Pangkal Pinang"
 
 #1348 -Central Kalimantan
  VICTORY_POINTS_2222: "Putussibau"
@@ -3224,7 +3234,6 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_10000:0 "Tsingtao"
  VICTORY_POINTS_10068:0 "Tianjin"
  VICTORY_POINTS_10404:0 "Guilin"
- VICTORY_POINTS_12299:0 "Singapore"
  VICTORY_POINTS_1330:0 "Rangoon"
  VICTORY_POINTS_1492:0 "Mandalay"
  VICTORY_POINTS_4425:0 "Myitkyina"
