--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -2671,13 +2671,19 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_10479: "Malang"
  VICTORY_POINTS_7654: "Banyuwangi"
 
-#1343 -RIAU ISLANDS
+#1343 - RIAU ISLANDS
  VICTORY_POINTS_15421: "Tarempa"
 
-#1344 -MERANTI ISLANDS
+#1344 - MENTAWI ISLANDS
+ VICTORY_POINTS_15405: "Tuapeijat"
+
+#1345 - MERANTI ISLANDS
  VICTORY_POINTS_15414: "Selat Panjang"
 
-#1347 -Bengka - Belitung
+#1346 - NIAS ISLANDS
+ VICTORY_POINTS_15413: "Gunungsitoli"
+
+#1347 - Bengka - Belitung
  VICTORY_POINTS_7384: "Pangkal Pinang"
 
 #1348 -Central Kalimantan
