some patagonia VPs

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1224,9 +1224,9 @@
  STATE_1223: "Aracuaria"
  STATE_1224: "Chaco Boreal"
  STATE_1225: "La Pampa"
- STATE_1226: "Nequen"
- STATE_1227: "Aysen"
- STATE_1228: "Aysen"
+ STATE_1226: "Nehuenken"
+ STATE_1227: "New Calhoun"
+ STATE_1228: "Coquimbo"
  STATE_1229: "Corfu"
  STATE_1230: "Kithira"
  STATE_1231: "Debar"
@@ -1244,7 +1244,7 @@
  STATE_1243: "Ragusa"
  STATE_1244: "Uskudar"
  STATE_1245: "Mount Athos"
- STATE_1246: "Cordoba"
+ STATE_1246: "Córdoba"
  STATE_1247: "Drakesland"
  STATE_1248: "Mapuche Land"
  STATE_1249: "Cuyo"
