--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -725,8 +725,9 @@
  VICTORY_POINTS_2008: "León de los Aldama"
  VICTORY_POINTS_1965: "Mexico City"
 #278 - PAMPAS
- VICTORY_POINTS_12364: "Buenos Aires"
- VICTORY_POINTS_7621: "Mar del Plata"
+ VICTORY_POINTS_12351: "Luján"
+ VICTORY_POINTS_12394: "Olavarria"
+ VICTORY_POINTS_7621: "Puerto Lobos"
 #279 - SANTIAGO
  VICTORY_POINTS_650: "Santiago"
 #280 - MATO GROSSO
@@ -785,6 +786,7 @@
 #298 - CABO MESURADO
  VICTORY_POINTS_7959: "Mesurado"
 #299 - FALKLAND ISLANDS
+ VICTORY_POINTS_12960: "Port William"
 #300 - URUGUAY
  VICTORY_POINTS_10362: "Montevideo"
  VICTORY_POINTS_12336: "Maldonado"
@@ -1315,14 +1317,20 @@ VICTORY_POINTS_10271: "Vancouver"
  VICTORY_POINTS_8140: "Vila Boa"
 #506 - COPAPIO
 #507 - MAGALLANES
+ VICTORY_POINTS_13460: "Edensbury"
 #508 - MENDOZA
+ VICTORY_POINTS_8215: "Mendoza"
 #509 - CHACO AUSTRAL
  VICTORY_POINTS_2106: "Barranqueras"
 #510 - ENTRE RIOS
  VICTORY_POINTS_1449: "Parana"
  VICTORY_POINTS_10943: "Concordia"
 #511 - RIO NEGRO
+ VICTORY_POINTS_10981: "Newyddarfon"
+ VICTORY_POINTS_14835: "Cwm Glas"
 #512 - PATAGONIA
+ VICTORY_POINTS_10953: "Port Victoria"
+ VICTORY_POINTS_13471: "Whitesborough"
 #513 - TLEMCEN
  VICTORY_POINTS_10059: "Batna"
  VICTORY_POINTS_12888: "Biskra"
@@ -2375,7 +2383,10 @@ VICTORY_POINTS_4757: "Bowieville"
 #995 - ARICA
 #996 - ANTOFAGASTA
 #997 - ARACUANIA
+ VICTORY_POINTS_14829: "Chauracavi"
+ VICTORY_POINTS_5121: "Scotsville"
 #998 - TIERRA DEL FUEGO
+ VICTORY_POINTS_5209: "Sandy Point"
 #999 - CORRIENTES
  VICTORY_POINTS_12964: "Corrientes"
 #1000 - CAMPOS DEL NORTE
@@ -2652,16 +2663,35 @@ VICTORY_POINTS_4757: "Bowieville"
 #1177 - GELDERLAND
  VICTORY_POINTS_9403: "Enschede"
 
-#1125 - La Pampa
- VICTORY_POINTS_1639:0 "Bahía Blanca"
+#1225 - LA PAMPA
+ VICTORY_POINTS_1639: "Bahía Blanca"
+ VICTORY_POINTS_10418: "General Baltasar"
+ VICTORY_POINTS_10935: "Santa Isabel"
+ VICTORY_POINTS_14837: "Rio Colorado"
+#1226 - NEHUENKEN
+ VICTORY_POINTS_12306: "Nehuenken"
+#1227 - MAPUCHE LAND
+ VICTORY_POINTS_14826: "Puelco"
 
 #1223 - Aracuria
- VICTORY_POINTS_8224:0 "Dourados"
+ VICTORY_POINTS_8224: "Dourados"
 #1224 - Chaco Boreal
- VICTORY_POINTS_12916:0 "Robore"
-
+ VICTORY_POINTS_12916: "Robore"
+#1227 - NEW CALHOUN
+ VICTORY_POINTS_2161: "New Calhoun"
+#1246 - CORDOBA
+ VICTORY_POINTS_10985: "Alta Gracia"
+ VICTORY_POINTS_14626: "Córdoba"
+ VICTORY_POINTS_12970: "San Luis"
+#1247 - DRAKESLAND
+ VICTORY_POINTS_14809: "Drakeville"
+ VICTORY_POINTS_13548: "Stanton"
+#1249 - CUYO
+ VICTORY_POINTS_10964: "San Juan"
+#1254 - RIO BLANCO
+ VICTORY_POINTS_13461: "Porth Gwynfyd"
 #1290 - Aden
- VICTORY_POINTS_15002:0 "Aden"
+ VICTORY_POINTS_15002: "Aden"
 
 #1339 - BANTEN
  VICTORY_POINTS_10479: "Tangerang"
@@ -2688,18 +2718,23 @@ VICTORY_POINTS_4757: "Bowieville"
 #1346 - NIAS ISLANDS
  VICTORY_POINTS_15413: "Gunungsitoli"
 
-#1347 - Bengka - Belitung
+#1347 - BENGKA-BELITUNG
  VICTORY_POINTS_7384: "Pangkal Pinang"
 
-#1348 -Central Kalimantan
+#1348 - CENTRAL KALIMANTAN
  VICTORY_POINTS_2222: "Putussibau"
  VICTORY_POINTS_5176: "Puruk Cahu"
 
-#1349 -Southern Kalimantan
+#1349 - SOUTHERN KALIMANTAN
  VICTORY_POINTS_7227: "Pangkalanbuun"
  VICTORY_POINTS_4409: "Kendawangan"
  VICTORY_POINTS_15409: "Sukadana"
  VICTORY_POINTS_12280: "Sampit"
+#1367 - BUENOS AIRES
+ VICTORY_POINTS_12364: "Buenos Aires"
+ VICTORY_POINTS_14546: "Morón"
+#1368 - CHILOE ISLAND
+ VICTORY_POINTS_13462: "Ancud"
 
 #1400 - WEST SUMATRA
  VICTORY_POINTS_10354: "Padang"
@@ -3542,8 +3577,6 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_8129:0 "Barreiras"
  VICTORY_POINTS_12853:0 "Nequete"
  VICTORY_POINTS_10362:0 "Montevideo"
- VICTORY_POINTS_12364:0 "Buenos Aires"
- VICTORY_POINTS_7621:0 "Mar del Plata"
  VICTORY_POINTS_8216:0 "Tucumán"
  VICTORY_POINTS_12942:0 "Córdoba"
  VICTORY_POINTS_650:0 "Santiago"
@@ -3646,7 +3679,7 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_1048:0 "Cádiz"
  VICTORY_POINTS_1070:0 "Xiuying"
  VICTORY_POINTS_1273:0 "Goa"
- VICTORY_POINTS_1440:0 "San Juan"
+
  VICTORY_POINTS_1751:0 "Azores"
  VICTORY_POINTS_2038:0 "Freetown"
  VICTORY_POINTS_2189:0 "Recherche"
