--- a/localisation/english/PB_country_specific/PB_Alaska_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Alaska_l_english.yml
@@ -3,6 +3,12 @@
   # TOOLTIPS
   ##########################
   ASK_CC_Accepted_tt:0 "This minister's cultural community is (§GAccepted§!) or (§CIntegrated§!)."
+  PB_ASK_Spacing:0 "  \n"
+  ASK_Max_CC_tt:0 "The Maximum number of Cultural Communities have been established"
+  ASK_Random_Cultural_Community:0 "A random §HCultural Community§! will establish itself"
+  ASK_Available_CC_To_Assimilate:0 "There is an available Cultural Community to assimilate"
+  ASK_Assimilate_Random_Community:0 "Assimilate Random Community"
+  ASK_Assimilate_Random_Community_tt:0 "A random Cultural Community will be made (§GAccepted§!), if this community is already accepted it will instead become (§CIntegrated§!).\n\nAdvisors, officers, and tech teams associated with the culture in question will become available if the Cultural Community is progressing from (§RNot Accepted§!) to (§GAccepted§!)."
 
   ##########################
   # MINISTERS
@@ -68,30 +74,10 @@
   PB_ASK_Native_Accepted:0 "§GAccepted§!"
   PB_ASK_Native_Integrated:0 "§CIntegrated§!"
 
+  ASK_Frontier_Settlers:0 "In Search Of A New Life"
+  ASK_Frontier_Settlers_desc:0 "Every month convoys full of eager and bright minds are shipped off from the motherland into our young virgin nation, these people, whom come from all walks of life, have brought with them their skills and specialities to which our colony desperately requires should it prosper into a fully developed nation. There are also those whom have crossed into our borders fleeing tyranny, or just with a vigor for expedition, these souls, whatever the case may be for their arrival, will too find their rich future on our soil. We shall welcome everyone, poor, sick, and all."
+
   ##########################
   # FOCUSES
   ##########################
 
-  PB_ASK_Bitch_War:0 "The Bitch War"
-
-  PB_ASK_Loyalty_to_Moscow:0 "Pressure Moscow for Assistance"
-  PB_ASK_Bring_in_troops:0 "Bring in the Big Guns"
-  PB_ASK_Bring_in_more_troops:0 "Bring in the Bigger Guns"
-  PB_ASK_Bring_in_more_tanks:0 "Bring in the Even Bigger Guns"
-  PB_ASK_Bribe_the_Mafia:0 "Bribes for Informants"
-  PB_ASK_Assassinate_Dissidents:0 "Remove the Troublemakers"
-  PB_ASK_Mobilize_the_Peasantry:0 "Mobilize the Peasantry"
-  PB_ASK_Revive_Scalping:0 "Scalps for Rubles"
-  PB_ASK_Permanent_Martial_Law:0 "Permanent State of Martial Law"
-  PB_ASK_Regime_Maintained:0 "Nothing to See Here, Move Along"
-
-  PB_ASK_Handle_It_Ourselves:0 "We Can Handle It"
-  PB_ASK_Scavenge_Weapons:0 "Buy Up Peasant Rifles"
-  PB_ASK_Cities_Focus:0 "Focus on the Cities"
-  PB_ASK_Outgunned:0 "We Are Outgunned"
-  PB_ASK_Borrow_Peasant_Funds:0 "Borrow Peasant Funds"
-  PB_ASK_Borrowed_Time:0 "Running on Borrowed Time"
-  PB_ASK_Outmanned:0 "We Are Outmanned"
-  PB_ASK_Open_Rails:0 "Try to Hold the Railways"
-  PB_ASK_Open_Ports:0 "We Are Outplanned"
-  PB_ASK_Last_Stand_at_the_Sea:0 "Our Backs to the Sea"
