Sumatra Vps finished

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1741,10 +1741,12 @@ VICTORY_POINTS_7453: "Heldstad"
  VICTORY_POINTS_4379: "Hue"
 #672 - SOUTH SUMATRA
  VICTORY_POINTS_12138: "Bengkoeloe"
- VICTORY_POINTS_1373: "Djambi"
  VICTORY_POINTS_12268: "Palembang"
  VICTORY_POINTS_4361: "Teleokbetoeng"
  VICTORY_POINTS_12165: "Menggala"
+ VICTORY_POINTS_10322: "Prabumulih"
+ VICTORY_POINTS_10150: "Lubuk Linggau"
+ VICTORY_POINTS_15403: "Pagar Alam"
 #673 - SULAWESI
  VICTORY_POINTS_12444: "Kendari"
  VICTORY_POINTS_10263: "Makassar"
@@ -2701,10 +2703,16 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_10479: "Malang"
  VICTORY_POINTS_7654: "Banyuwangi"
 
-#1343 - RIAU 
+#1341 - DJAMBI
+ VICTORY_POINTS_1373: "Djambi"
+ VICTORY_POINTS_12415: "Sungai Penuh"
+
+
+#1342- RIAU 
  VICTORY_POINTS_12181: "Pekanbaru"
  VICTORY_POINTS_10209: "Rengat"
  VICTORY_POINTS_7463: "Dumai"
+ VICTORY_POINTS_12212: "Rengat"
 
 #1343 - RIAU ISLANDS
  VICTORY_POINTS_15421: "Tarempa"
@@ -2738,6 +2746,10 @@ VICTORY_POINTS_4757: "Bowieville"
 
 #1400 - WEST SUMATRA
  VICTORY_POINTS_10354: "Padang"
+
+#1401- BENGGKULU
+ VICTORY_POINTS_12138: "Bengkulu"
+ VICTORY_POINTS_7308: "Mana"
 
 
  VICTORY_POINTS_4801: "Urga"
@@ -3645,7 +3657,6 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_7980:0 "Harar"
  VICTORY_POINTS_1316:0 "Pontianak"
  VICTORY_POINTS_4279:0 "Singkawang"
- VICTORY_POINTS_1373:0 "Djambi"
  VICTORY_POINTS_7446:0 "Qutsing"
  VICTORY_POINTS_10346:0 "Yunnan-Fu"
  VICTORY_POINTS_12898:0 "Yongchang"
