more south america VPs

--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -340,7 +340,7 @@
  STRATEGICREGION_338:0 "Indochina Sea"
  STRATEGICREGION_339:0 "Karimata Strait"
  STRATEGICREGION_340:0 "Scotia Sea"
- STRATEGICREGION_341:0 "Chilean Fjords"
+ STRATEGICREGION_341:0 "Patagonian Fjords"
  STRATEGICREGION_342:0 "Lesser Antilles"
  STRATEGICREGION_343:0 "Eastern Caribbean Sea"
  STRATEGICREGION_344:0 "Lucayan Archipelago"
