--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -729,6 +729,8 @@
  VICTORY_POINTS_12394: "Olavarria"
  VICTORY_POINTS_7621: "Puerto Lobos"
 #279 - SANTIAGO
+ VICTORY_POINTS_14845: "Concepción"
+ VICTORY_POINTS_14625: "Nueva Valdivia"
  VICTORY_POINTS_650: "Santiago"
 #280 - MATO GROSSO
 #281 - MALDIVES
@@ -788,29 +790,39 @@
 #299 - FALKLAND ISLANDS
  VICTORY_POINTS_12960: "Port William"
 #300 - URUGUAY
- VICTORY_POINTS_10362: "Montevideo"
+ VICTORY_POINTS_12481: "Aramendía"
  VICTORY_POINTS_12336: "Maldonado"
- VICTORY_POINTS_12481: "Treinta y Tres"
+ VICTORY_POINTS_1641: "Melo"
+ VICTORY_POINTS_10362: "Montevideo"
 #301 - PARAGUAY
  VICTORY_POINTS_2152: "Asunción"
- VICTORY_POINTS_12901: "Ciudad del Este"
- VICTORY_POINTS_11023: "Pedro Juan Caballero"
  VICTORY_POINTS_14556: "Luque"
+ VICTORY_POINTS_12901: "Puerto Flor"
+ VICTORY_POINTS_11023: "San Vincente"
+ VICTORY_POINTS_14627: "Tavarangue"
 #302 - LA PAZ
- VICTORY_POINTS_5230: "La Paz"
+ VICTORY_POINTS_8157: "Cochabamba"
+ VICTORY_POINTS_14640: "La Paz"
 #303 - LIMA
- VICTORY_POINTS_12997: "Lima"
+ VICTORY_POINTS_2225: "Ica"
+ VICTORY_POINTS_14641: "Lima"
 #304 - AMAPA
- VICTORY_POINTS_4980: "Macapá"
+ VICTORY_POINTS_4980: "Rubbertown"
 #305 - ECUADOR
+ VICTORY_POINTS_11020: "Cuenca"
  VICTORY_POINTS_8252: "Guayaquil"
  VICTORY_POINTS_12798: "Quito"
 #306 - CUNDINAMARCA
- VICTORY_POINTS_10747: "Bogota"
+ VICTORY_POINTS_14614: "Bogotá"
+ VICTORY_POINTS_14615: "Tunja"
 #307 - MIRANDA
- VICTORY_POINTS_8113: "Caracas"
+ VICTORY_POINTS_14645: "Caracas"
+ VICTORY_POINTS_10855: "Valencia del Rey"
 #308 - LEEWARD ISLANDS
 #309 - SURINAME
+ VICTORY_POINTS_14612: "Fordlandia"
+ VICTORY_POINTS_13554: "Paramaribo"
+ VICTORY_POINTS_14610: "New Dayton"
 #310 - CAYENNE
  VICTORY_POINTS_12885: "Borgesiusstad"
 #311 - BRITISH HONDURAS
@@ -1280,16 +1292,22 @@ VICTORY_POINTS_10271: "Vancouver"
  VICTORY_POINTS_10730: "Chilpancingo"
  VICTORY_POINTS_8032: "Ciudad Lázaro Cárdenas"
 #486 - META
+ VICTORY_POINTS_1887: "Pore"
 #487 - SANTA CRUZ
-#488 - BOLIVAR
+ VICTORY_POINTS_10924: "Santa Cruz de la Sierra"
+#488 - ORINOCO
+ VICTORY_POINTS_10736: "Angostura"
 #489 - ZULIA
+ VICTORY_POINTS_5088: "Cabimas"
  VICTORY_POINTS_1944: "Maracaibo"
 #490 - PASTAZA
+ VICTORY_POINTS_13454: "Iquitos"
 #491 - LORETO
 #492 - AREQUIPA
  VICTORY_POINTS_2210: "Arequipa"
+ VICTORY_POINTS_12953: "Huamanga"
+ VICTORY_POINTS_13451: "Puno"
 #493 - LA LIBERTAD
- VICTORY_POINTS_12790: "Cartagena"
  VICTORY_POINTS_2023: "Medellin"
  VICTORY_POINTS_7630: "Panamá"
 #494 - UCAYALI
@@ -1307,21 +1325,25 @@ VICTORY_POINTS_10271: "Vancouver"
  VICTORY_POINTS_10513: "Sao Paulo"
 #502 - RIO GRANDE DO SUL
  VICTORY_POINTS_14554: "Porto Alegre"
- VICTORY_POINTS_7594: "Caxias do Sul"
- VICTORY_POINTS_4436: "Pelotas"
+ VICTORY_POINTS_7638: "Pelotas"
  VICTORY_POINTS_1598: "Santa Maria"
+ VICTORY_POINTS_4604: "Santana do Livramento"
+ VICTORY_POINTS_1585: "São Borja"
+ VICTORY_POINTS_1542: "Vacaria"
 #503 - PARANA
  VICTORY_POINTS_14632: "Curitiba"
 #504 - IGUACU
 #505 - SAO FRANCISCO
  VICTORY_POINTS_8140: "Vila Boa"
-#506 - COPAPIO
+#506 - COPIAPO
+ VICTORY_POINTS_5228: "Copiapó"
 #507 - MAGALLANES
  VICTORY_POINTS_13460: "Edensbury"
 #508 - MENDOZA
  VICTORY_POINTS_8215: "Mendoza"
 #509 - CHACO AUSTRAL
  VICTORY_POINTS_2106: "Barranqueras"
+ VICTORY_POINTS_14859: "Villa Ángela"
 #510 - ENTRE RIOS
  VICTORY_POINTS_1449: "Parana"
  VICTORY_POINTS_10943: "Concordia"
@@ -1687,6 +1709,7 @@ VICTORY_POINTS_7453: "Heldstad"
  VICTORY_POINTS_12103: "Koror"
 #648 - MARCUS ISLAND
 #649 - GALAPAGOS ISLANDS
+ VICTORY_POINTS_5023: "Puerto Villamil"
 #650 - ATTU ISLAND
  VICTORY_POINTS_10367: "Attu Island"
 #651 - BASHKORTOSTAN
@@ -1787,8 +1810,9 @@ VICTORY_POINTS_7453: "Heldstad"
 #686 - PUERTO RICO
  VICTORY_POINTS_1440: "San Juan"
 #687 - GUYANA
+ VICTORY_POINTS_13552: "New Kent"
 #688 - CHACO BOREAL
- VICTORY_POINTS_2209: "Ciudad del Acero"
+ VICTORY_POINTS_2209: "Villa Hayes"
 #689 - JAMAICA
  VICTORY_POINTS_12304: "Kingston"
 #690 - NORTHERN BAHAMAS
@@ -2066,7 +2090,7 @@ VICTORY_POINTS_9847: "Norwalk"
  VICTORY_POINTS_620: "Limoges"
 #826 - PORT-PHILIPPE
 #827 - ACRE
- VICTORY_POINTS_10960: "Porto Acre"
+ VICTORY_POINTS_10960: "Puerto Acre"
 #828 - ACREAN AMAZONAS
 #829 - GRANADAN AMAZONAS
 #830 - GOIAS
@@ -2270,6 +2294,7 @@ VICTORY_POINTS_9847: "Norwalk"
 #938 - GUADALAJARA
  VICTORY_POINTS_3945: "Cuenca"
 #939 - CUZCO
+ VICTORY_POINTS_5166: "Cuzco"
 #940 - ROMANDE
  VICTORY_POINTS_6666: "Geneva"
 #941 - KANSAS
@@ -2359,6 +2384,7 @@ VICTORY_POINTS_4757: "Bowieville"
 #975 - PUTAMAYO
 #976 - JAPURA
 #977 - MARAJO
+ VICTORY_POINTS_14597: "Port Steel"
 #978 - BELEM
  VICTORY_POINTS_13543: "Belém"
 #979 - PIAUI
@@ -2371,19 +2397,32 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_7476: "Ouro Preto"
 #984 - TIETE
 #985 - MISIONES
+ VICTORY_POINTS_11007: "Fuerte Iguazú"
 #986 - CUMANA
+ VICTORY_POINTS_10912: "Cumaná"
 #987 - PIURA
+ VICTORY_POINTS_12969: "Caxamarca"
+ VICTORY_POINTS_2156: "Piura"
 #988 - SANTA CATARINA
- VICTORY_POINTS_10405: "Florianopolis"
+ VICTORY_POINTS_10405: "Desterro"
+ VICTORY_POINTS_1529: "Lages"
 #989 - PAYSANDU
+ VICTORY_POINTS_12440: "Artigas"
  VICTORY_POINTS_12468: "Salto"
 #990 - CARAJAS
 #991 - EL BENI
+ VICTORY_POINTS_10996: "La Santísima Trinidad"
 #992 - POTOSI
+ VICTORY_POINTS_12930: "Potosí"
 #993 - TARIJA
+ VICTORY_POINTS_5229: "Tarija"
 #994 - TACNA
+ VICTORY_POINTS_13086: "Tacna"
 #995 - ARICA
+ VICTORY_POINTS_5131: "Arica"
 #996 - ANTOFAGASTA
+ VICTORY_POINTS_14633: "Antofagasta"
+ VICTORY_POINTS_8217: "Iquique"
 #997 - ARACUANIA
  VICTORY_POINTS_14829: "Chauracavi"
  VICTORY_POINTS_5121: "Scotsville"
@@ -2403,6 +2442,7 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_13476: "Salta"
 #1004 - NUEVA ESPERANZA
  VICTORY_POINTS_15530: "Catamarca"
+ VICTORY_POINTS_2136: "La Rioja"
 #1005 - YUKON
 #1006 - NOVOARKHANGELSK
  VICTORY_POINTS_13203: "Novo-Arkhangelsk"
@@ -2675,12 +2715,14 @@ VICTORY_POINTS_4757: "Bowieville"
 #1227 - MAPUCHE LAND
  VICTORY_POINTS_14826: "Puelco"
 
-#1223 - Aracuria
- VICTORY_POINTS_8224: "Dourados"
-#1224 - Chaco Boreal
- VICTORY_POINTS_12916: "Robore"
+#1223 - ARACUARIA
+ VICTORY_POINTS_8224: "Punta Hermosa"
+#1224 - CHACO BOREAL
+ VICTORY_POINTS_12916: "Callimentes"
 #1227 - NEW CALHOUN
  VICTORY_POINTS_2161: "New Calhoun"
+#1228 - COQUIMBO
+ VICTORY_POINTS_8194: "Coquimbo"
 #1246 - CORDOBA
  VICTORY_POINTS_10985: "Alta Gracia"
  VICTORY_POINTS_14626: "Córdoba"
@@ -2690,6 +2732,18 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_13548: "Stanton"
 #1249 - CUYO
  VICTORY_POINTS_10964: "San Juan"
+#1250 - SANTIAGO DEL ESTERO
+ VICTORY_POINTS_10975: "Miramar"
+ VICTORY_POINTS_5143: "Santiago del Estero"
+#1251 - CAUCA
+ VICTORY_POINTS_10494: "Buenaventura"
+ VICTORY_POINTS_14870: "Cali"
+ VICTORY_POINTS_7936: "Popayán"
+#1252 - MAGDALENA
+ VICTORY_POINTS_12790: "Cartagena"
+ VICTORY_POINTS_8056: "Santa Marta"
+#1253 - BARINAS
+ VICTORY_POINTS_5000: "Barinas"
 #1254 - RIO BLANCO
  VICTORY_POINTS_13461: "Porth Gwynfyd"
 #1290 - Aden
@@ -3566,17 +3620,7 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_9097:0 "Oranienbaum"
  VICTORY_POINTS_7660:0 "Santo Domingo"
  VICTORY_POINTS_4598:0 "Santiago de los Caballeros"
- VICTORY_POINTS_12885:0 "Borgesiusstad"
- VICTORY_POINTS_10747:0 "Bogota"
- VICTORY_POINTS_2023:0 "Medellin"
- VICTORY_POINTS_12790:0 "Cartagena"
- VICTORY_POINTS_8113:0 "Caracas"
- VICTORY_POINTS_1944:0 "Maracaibo"
- VICTORY_POINTS_12798:0 "Quito"
- VICTORY_POINTS_12997:0 "Lima"
- VICTORY_POINTS_2210:0 "Arequipa"
- VICTORY_POINTS_5230:0 "La Paz"
- VICTORY_POINTS_2152:0 "Asunción"
+
  VICTORY_POINTS_10980:0 "Rio de Julho"
  VICTORY_POINTS_8140:0 "Vila Boa"
  VICTORY_POINTS_7476:0 "Ouro Preto"
@@ -3753,7 +3797,6 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_7965:0 "Dali"
  VICTORY_POINTS_7982:0 "Bandar e'Abbas"
  VICTORY_POINTS_8085:0 "Kuwait City"
- VICTORY_POINTS_8252:0 "Guayaquil"
  VICTORY_POINTS_6165:0 "Luleå"
  VICTORY_POINTS_101:0 "Kiruna"
  VICTORY_POINTS_155:0 "Segezha"
@@ -3903,7 +3946,6 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_1576:0 "Nukus"
  VICTORY_POINTS_13203:0 "Novo-Arkhangelsk"
  VICTORY_POINTS_7884:0 "Pavlovskiy"
- VICTORY_POINTS_4980:0 "Macapá"
  VICTORY_POINTS_2219:0 "Lievelde"
  VICTORY_POINTS_6217:0 "Izhevsk"
  VICTORY_POINTS_11136:0 "Aberdeen"
@@ -3961,7 +4003,6 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_10842:0 "Quetzaltenango"
  VICTORY_POINTS_7887:0 "Kirikiriroa"
  VICTORY_POINTS_8241:0 "Invercargill"
- VICTORY_POINTS_10960:0 "Porto Acre"
  VICTORY_POINTS_4985:0 "Sagallo"
  VICTORY_POINTS_12211:0 "Libertalia"
  VICTORY_POINTS_10582:0 "El lago Salado"
@@ -4075,7 +4116,6 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_9771:0 "Vidin"
  VICTORY_POINTS_8038:0 "El Aaiún"
  VICTORY_POINTS_1751:0 "Ponta Delgada"
- VICTORY_POINTS_13071:0 "Santa Cruz de Tenerife"
  VICTORY_POINTS_858:0 "Toledo"
  VICTORY_POINTS_6902:0 "Badajoz"
  VICTORY_POINTS_6832:0 "Ciudad Real"
@@ -4173,7 +4213,6 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_12745:0 "Chihuahua"
  VICTORY_POINTS_5044:0 "El Paso del Norte"
  VICTORY_POINTS_3834:0 "Tucsón"
- VICTORY_POINTS_12736:0 "La Paz"
  VICTORY_POINTS_12461:0 "Ensenada"
  VICTORY_POINTS_13280:0 "Coatzacoalcos"
  VICTORY_POINTS_10740:0 "El Paso del Libertad"
