even more SA VPs

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -493,17 +493,17 @@
  STATE_492: "Arequipa"
  STATE_493: "La Libertad"
  STATE_494: "Ucayali"
- STATE_495: "Santarem"
+ STATE_495: "Santarém"
  STATE_496: "Diamantina"
- STATE_497: "Maranhao"
+ STATE_497: "Maranhão"
  STATE_498: "Nordeste"
  STATE_499: "Bahia"
  STATE_500: "Rio de Julho"
  STATE_501: "Elias da Silva"
  STATE_502: "Rio Grande do Sul"
  STATE_503: "Parana"
- STATE_504: "Mato Grosso do Sul"
- STATE_505: "Sao Francisco"
+ STATE_504: "Caiouás"
+ STATE_505: "Cerrado"
  STATE_506: "Copiapó"
  STATE_507: "Magallanes"
  STATE_508: "Mendoza"
@@ -828,7 +828,7 @@
  STATE_827: "Lower Acre"
  STATE_828: "Upper Acre"
  STATE_829: "Granadan Amazonas"
- STATE_830: "Goias"
+ STATE_830: "Juruana"
  STATE_831: "Nice"
  STATE_832: "Upper Savoy"
  STATE_833: "Abruzzo"
@@ -976,19 +976,19 @@
  STATE_975: "Putamayo"
  STATE_976: "Japura"
  STATE_977: "Marajo"
- STATE_978: "Belem"
+ STATE_978: "Belém"
  STATE_979: "Piaui"
- STATE_980: "Ceara"
+ STATE_980: "Ceará"
  STATE_981: "Pernambuco"
- STATE_982: "Espirito Santo"
+ STATE_982: "Espírito Santo"
  STATE_983: "Minas Gerais"
- STATE_984: "Tiete"
+ STATE_984: "Tietê"
  STATE_985: "Misiones"
  STATE_986: "Cumaná"
  STATE_987: "Piura"
  STATE_988: "Santa Catarina"
  STATE_989: "Paysandu"
- STATE_990: "Carajas"
+ STATE_990: "Carajás"
  STATE_991: "El Beni"
  STATE_992: "Potosí"
  STATE_993: "Tarija"
@@ -1219,7 +1219,7 @@
  STATE_1218: "Coast Essequibo"
  STATE_1219: "Delta Amacuro"
  STATE_1220: "Guyana Shield"
- STATE_1221: "Manaus"
+ STATE_1221: "Amazonópolis"
  STATE_1222: "Javari"
  STATE_1223: "Aracuaria"
  STATE_1224: "Chaco Boreal"
