Indonesia VPS Confirmed

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1770,8 +1770,11 @@ VICTORY_POINTS_7453: "Heldstad"
  VICTORY_POINTS_6165: "Luleå"
 #667 - LESSER SUNDA ISLANDS
  VICTORY_POINTS_4273: "Denpasar"
+ VICTORY_POINTS_12162: "Bima"
+ VICTORY_POINTS_7321: "Maumere"
 #668 - THE MOLUCCAS
  VICTORY_POINTS_1574: "Ambon"
+ VICTORY_POINTS_7413: "Ternate"
 #669 - NORTHERN PAPUA
  VICTORY_POINTS_12371: "Franz Joseph Stadt"
  VICTORY_POINTS_12237: "Lae"
@@ -1796,6 +1799,8 @@ VICTORY_POINTS_7453: "Heldstad"
  VICTORY_POINTS_12444: "Kendari"
  VICTORY_POINTS_10263: "Makassar"
  VICTORY_POINTS_10153: "Manado"
+ VICTORY_POINTS_12358: "Palu"
+ VICTORY_POINTS_1589: "Sengkang"
 #674 - NIEUW FRIESLAND
  VICTORY_POINTS_2219: "Lievelde"
 #675 - ROJAVA
